[gd_scene load_steps=16 format=3 uid="uid://drc7f16f18fq4"]

[ext_resource type="Texture2D" uid="uid://ce8a1iidnal5k" path="res://Sprites/Character.png" id="1_v0iea"]
[ext_resource type="Script" uid="uid://cpolpfk1qlj27" path="res://Scripts/player.gd" id="2_cvnsp"]
[ext_resource type="Texture2D" uid="uid://cvqr2bqw6rxvl" path="res://Sprites/Character_PowerSword.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://c3ytjpdrg488o" path="res://Sprites/coin.png" id="4_vgqql"]

[sub_resource type="Gradient" id="Gradient_6t5aa"]
offsets = PackedFloat32Array(0.012987, 1)
colors = PackedColorArray(1, 0.666667, 0.466667, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vgqql"]
gradient = SubResource("Gradient_6t5aa")
fill = 1
fill_from = Vector2(0.504587, 0.490826)
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_6t5aa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.701045]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "attack"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.099, 0.1, 0.199, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 0), Vector2(4, 0), Vector2(4, 3), Vector2(4, 3), Vector2(3, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.099, 0.1, 0.199, 0.200008),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.701045, -0.701045, -0.00519818, -0.00519818, 0.852673]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon_pivot/SwordHitBox/ColShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "fall"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_cvnsp"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_v0iea"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgqql"]
_data = {
&"RESET": SubResource("Animation_6t5aa"),
&"attack": SubResource("Animation_vgqql"),
&"fall": SubResource("Animation_x3wgy"),
&"idle": SubResource("Animation_cvnsp"),
&"jump": SubResource("Animation_fkybt"),
&"run": SubResource("Animation_v0iea")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(4, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6t5aa"]
size = Vector2(9, 3)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("coin_symbol", "no_coin_symbol") groups=["player"]]
collision_mask = 17
script = ExtResource("2_cvnsp")
normal = ExtResource("1_v0iea")
power = ExtResource("3_6t5aa")
trail_texture = ExtResource("1_v0iea")
coin_symbol = NodePath("Sprite2D/Coin")
no_coin_symbol = NodePath("Sprite2D/NoCoin")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0.500004, 0)
scale = Vector2(1.01563, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_vgqql")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v0iea")
hframes = 17

[node name="Coin" type="Sprite2D" parent="Sprite2D"]
visible = false
position = Vector2(0, -6)
texture = ExtResource("4_vgqql")

[node name="NoCoin" type="Sprite2D" parent="Sprite2D"]
visible = false
modulate = Color(0.402757, 0.065346, 1.44392e-07, 1)
position = Vector2(0, -6)
texture = ExtResource("4_vgqql")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vgqql")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1

[node name="weapon_pivot" type="Node2D" parent="."]

[node name="SwordHitBox" type="Area2D" parent="weapon_pivot"]
collision_layer = 4
collision_mask = 9

[node name="ColShape2D" type="CollisionShape2D" parent="weapon_pivot/SwordHitBox"]
position = Vector2(4, 0)
rotation = -0.701045
shape = SubResource("RectangleShape2D_6t5aa")
debug_color = Color(0.963474, 0.163579, 0.261141, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="body_entered" from="weapon_pivot/SwordHitBox" to="." method="_on_sword_hit_box_body_entered"]
